Revert "Merge branch 'feature/3638' of https://github.com/e-Evolution/adempiere into develop"
This reverts commit 6b3803013d8b3248df9f5d44b1a64b627ae80aba, reversing
changes made to 8406d60a335ddef7cc45b2a40af6c387846d688f.